update 3 files and delete 1 file

--- a/html_demo/index.html
+++ b/html_demo/index.html
@@ -7,38 +7,157 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      @keyframes foo {
-        to {
-          scale: 1;
-        }
+      :root {
+        --card-height: 300px;
+        --card-width: calc(var(--card-height) / 1.5);
+      }
+      * {
+        box-sizing: border-box;
       }
 
-      model-viewer {
-        display: block;
+      .unique-cool-card {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+
+      .unique-card {
+        width: var(--card-width);
+        height: var(--card-height);
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        padding: 0 36px;
+        perspective: 2500px;
+        margin: 0 50px;
+        border-radius: 15px;
+      }
+
+      .unique-cover-image {
         width: 100%;
-        height: 95vh;
-        position: fixed;
-        animation: foo linear both;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 15px;
+      }
+
+      .unique-wrapper {
+        transition: all 0.5s;
+        position: absolute;
+        width: 100%;
+        z-index: -1;
+        border-radius: 15px;
+      }
+
+      .unique-card:hover .unique-wrapper {
+        transform: perspective(900px) translateY(-5%) rotateX(25deg)
+          translateZ(0);
+        box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+      }
+
+      .unique-wrapper::before,
+      .unique-wrapper::after {
+        content: "";
+        opacity: 0;
+        width: 100%;
+        height: 80px;
+        transition: all 0.5s;
+        position: absolute;
+        left: 0;
+      }
+      .unique-wrapper::before {
+        top: 0;
+        height: 100%;
+        background-image: linear-gradient(
+          to top,
+          transparent 46%,
+          rgba(12, 13, 19, 0.5) 68%,
+          rgba(12, 13, 19) 97%
+        );
+      }
+      .unique-wrapper::after {
+        bottom: 0;
+        opacity: 1;
+        background-image: linear-gradient(
+          to bottom,
+          transparent 46%,
+          rgba(12, 13, 19, 0.5) 68%,
+          rgba(12, 13, 19) 97%
+        );
+      }
+
+      .unique-card:hover .unique-wrapper::before,
+      .unique-wrapper::after {
+        opacity: 1;
+      }
+
+      .unique-card:hover .unique-wrapper::after {
+        height: 120px;
+      }
+      .unique-title {
+        width: 100%;
+        transition: transform 0.5s;
+      }
+      .unique-card:hover .unique-title {
+        transform: translate3d(0%, -50px, 100px);
+      }
+
+      .unique-character {
+        width: 100%;
+        opacity: 0;
+        transition: all 0.5s;
+        position: absolute;
         z-index: -1;
       }
 
-      model-viewer::part(default-progress-bar) {
-        display: none;
+      .unique-card:hover .unique-character {
+        opacity: 1;
+        transform: translate3d(0%, -30%, 100px);
       }
     </style>
   </head>
 
   <body>
-    <script
-      type="module"
-      src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
+    <div class="unique-cool-card">
+      <a
+        href="https://www.mythrillfiction.com/the-dark-rider"
+        alt="Mythrill"
+        target="_blank">
+        <div class="unique-card">
+          <div class="unique-wrapper">
+            <img
+              src="https://ggayane.github.io/css-experiments/cards/dark_rider-cover.jpg"
+              class="unique-cover-image" />
+          </div>
+          <img
+            src="https://ggayane.github.io/css-experiments/cards/dark_rider-title.png"
+            class="unique-title" />
+          <img
+            src="https://ggayane.github.io/css-experiments/cards/dark_rider-character.webp"
+            class="unique-character" />
+        </div>
+      </a>
 
-    <model-viewer
-      alt="Nike Air Max 90"
-      src="https://assets.codepen.io/89905/nike_air_max_90.glb"
-      camera-controls
-      auto-rotate
-      disable-zoom>
-    </model-viewer>
+      <a
+        href="https://www.mythrillfiction.com/force-mage"
+        alt="Mythrill"
+        target="_blank">
+        <div class="unique-card">
+          <div class="unique-wrapper">
+            <img
+              src="https://ggayane.github.io/css-experiments/cards/force_mage-cover.jpg"
+              class="unique-cover-image" />
+          </div>
+          <img
+            src="https://ggayane.github.io/css-experiments/cards/force_mage-title.png"
+            class="unique-title" />
+          <img
+            src="https://ggayane.github.io/css-experiments/cards/force_mage-character.webp"
+            class="unique-character" />
+        </div>
+      </a>
+    </div>
   </body>
 </html>
