--- a/html_demo/index.html
+++ b/html_demo/index.html
@@ -7,337 +7,175 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+      img {
+        display: block;
+        max-width: 100%;
       }
 
-      .unique-section {
-        height: 100vh;
+      .before-after-container {
         display: grid;
         place-items: center;
-        overflow: hidden;
+        min-height: 100vh;
       }
 
-      .unique-main {
+      .container {
+        display: grid;
+        place-content: center;
         position: relative;
+        overflow: hidden;
+        border-radius: 1rem;
+        --position: 50%;
+      }
+
+      .image-container {
+        max-width: 800px;
+        max-height: 90vh;
+        aspect-ratio: 1/1;
+      }
+
+      .slider-image {
         width: 100%;
         height: 100%;
-        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+        object-fit: cover;
+        object-position: left;
       }
 
-      .unique-item {
-        width: 200px;
-        height: 300px;
-        list-style-type: none;
+      .image-before {
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        z-index: 1;
-        background-position: center;
-        background-size: cover;
-        border-radius: 20px;
-        box-shadow: 0 20px 30px rgba(255, 255, 255, 0.3) inset;
-        transition:
-          transform 0.1s,
-          left 0.75s,
-          top 0.75s,
-          width 0.75s,
-          height 0.75s;
-
-        &:nth-child(1),
-        &:nth-child(2) {
-          left: 0;
-          top: 0;
-          width: 100%;
-          height: 100%;
-          transform: none;
-          border-radius: 0;
-          box-shadow: none;
-          opacity: 1;
-        }
-
-        &:nth-child(3) {
-          left: 50%;
-        }
-        &:nth-child(4) {
-          left: calc(50% + 220px);
-        }
-        &:nth-child(5) {
-          left: calc(50% + 440px);
-        }
-        &:nth-child(6) {
-          left: calc(50% + 660px);
-          opacity: 0;
-        }
+        inset: 0;
+        width: var(--position);
+        filter: grayscale(100%);
       }
 
-      .unique-content {
-        width: min(30vw, 400px);
+      .slider {
         position: absolute;
-        top: 50%;
-        left: 3rem;
-        transform: translateY(-50%);
-        font:
-          400 0.85rem helvetica,
-          sans-serif;
-        color: white;
-        text-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
+        inset: 0;
+        cursor: pointer;
         opacity: 0;
-        display: none;
-
-        & .unique-title {
-          font-family: "arial-black";
-          text-transform: uppercase;
-        }
-
-        & .unique-description {
-          line-height: 1.7;
-          margin: 1rem 0 1.5rem;
-          font-size: 0.8rem;
-        }
-
-        & button {
-          width: fit-content;
-          background-color: rgba(0, 0, 0, 0.1);
-          color: white;
-          border: 2px solid white;
-          border-radius: 0.25rem;
-          padding: 0.75rem;
-          cursor: pointer;
-        }
+        /* for Firefox */
+        width: 100%;
+        height: 100%;
       }
 
-      .unique-item:nth-of-type(2) .unique-content {
-        display: block;
-        animation: show 0.75s ease-in-out 0.3s forwards;
+      .slider:focus-visible ~ .slider-button {
+        outline: 5px solid black;
+        outline-offset: 3px;
       }
 
-      @keyframes show {
-        0% {
-          filter: blur(5px);
-          transform: translateY(calc(-50% + 75px));
-        }
-        100% {
-          opacity: 1;
-          filter: blur(0);
-        }
-      }
-
-      .unique-nav {
+      .slider-line {
         position: absolute;
-        bottom: 2rem;
-        left: 50%;
+        inset: 0;
+        width: 0.2rem;
+        height: 100%;
+        background-color: #fff;
+        /* z-index: 10; */
+        left: var(--position);
         transform: translateX(-50%);
-        z-index: 5;
-        user-select: none;
-
-        & .unique-btn {
-          background-color: rgba(255, 255, 255, 0.5);
-          color: rgba(0, 0, 0, 0.7);
-          border: 2px solid rgba(0, 0, 0, 0.6);
-          margin: 0 0.25rem;
-          padding: 0.75rem;
-          border-radius: 50%;
-          cursor: pointer;
-
-          &:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-          }
-        }
+        pointer-events: none;
       }
 
-      @media (width > 650px) and (width < 900px) {
-        .unique-content {
-          & .unique-title {
-            font-size: 1rem;
-          }
-          & .unique-description {
-            font-size: 0.7rem;
-          }
-          & button {
-            font-size: 0.7rem;
-          }
-        }
-        .unique-item {
-          width: 160px;
-          height: 270px;
-
-          &:nth-child(3) {
-            left: 50%;
-          }
-          &:nth-child(4) {
-            left: calc(50% + 170px);
-          }
-          &:nth-child(5) {
-            left: calc(50% + 340px);
-          }
-          &:nth-child(6) {
-            left: calc(50% + 510px);
-            opacity: 0;
-          }
-        }
-      }
-
-      @media (width < 650px) {
-        .unique-content {
-          & .unique-title {
-            font-size: 0.9rem;
-          }
-          & .unique-description {
-            font-size: 0.65rem;
-          }
-          & button {
-            font-size: 0.7rem;
-          }
-        }
-        .unique-item {
-          width: 130px;
-          height: 220px;
-
-          &:nth-child(3) {
-            left: 50%;
-          }
-          &:nth-child(4) {
-            left: calc(50% + 140px);
-          }
-          &:nth-child(5) {
-            left: calc(50% + 280px);
-          }
-          &:nth-child(6) {
-            left: calc(50% + 420px);
-            opacity: 0;
-          }
-        }
+      .slider-button {
+        position: absolute;
+        background-color: #fff;
+        color: black;
+        padding: 0.5rem;
+        border-radius: 100vw;
+        display: grid;
+        place-items: center;
+        top: 50%;
+        left: var(--position);
+        transform: translate(-50%, -50%);
+        pointer-events: none;
+        /* z-index: 100; */
+        box-shadow: 1px 1px 1px hsl(0, 50%, 2%, 0.5);
       }
     </style>
   </head>
 
   <body>
-    <section class="unique-section">
-      <div class="unique-main">
-        <ul class="unique-slider">
-          <li
-            class="unique-item"
-            style="
-              background-image: url(&quot;https://cdn.mos.cms.futurecdn.net/dP3N4qnEZ4tCTCLq59iysd.jpg&quot;);
-            ">
-            <div class="unique-content">
-              <h2 class="unique-title">"Lossless Youths"</h2>
-              <p class="unique-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Tempore fuga voluptatum, iure corporis inventore praesentium
-                nisi. Id laboriosam ipsam enim.
-              </p>
-              <button>Read More</button>
-            </div>
-          </li>
-          <li
-            class="unique-item"
-            style="
-              background-image: url(&quot;https://i.redd.it/tc0aqpv92pn21.jpg&quot;);
-            ">
-            <div class="unique-content">
-              <h2 class="unique-title">"Estrange Bond"</h2>
-              <p class="unique-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Tempore fuga voluptatum, iure corporis inventore praesentium
-                nisi. Id laboriosam ipsam enim.
-              </p>
-              <button>Read More</button>
-            </div>
-          </li>
-          <li
-            class="unique-item"
-            style="
-              background-image: url(&quot;https://wharferj.files.wordpress.com/2015/11/bio_north.jpg&quot;);
-            ">
-            <div class="unique-content">
-              <h2 class="unique-title">"The Gate Keeper"</h2>
-              <p class="unique-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Tempore fuga voluptatum, iure corporis inventore praesentium
-                nisi. Id laboriosam ipsam enim.
-              </p>
-              <button>Read More</button>
-            </div>
-          </li>
-          <li
-            class="unique-item"
-            style="
-              background-image: url(&quot;https://images7.alphacoders.com/878/878663.jpg&quot;);
-            ">
-            <div class="unique-content">
-              <h2 class="unique-title">"Last Trace Of Us"</h2>
-              <p class="unique-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Tempore fuga voluptatum, iure corporis inventore praesentium
-                nisi. Id laboriosam ipsam enim.
-              </p>
-              <button>Read More</button>
-            </div>
-          </li>
-          <li
-            class="unique-item"
-            style="
-              background-image: url(&quot;https://theawesomer.com/photos/2017/07/simon_stalenhag_the_electric_state_6.jpg&quot;);
-            ">
-            <div class="unique-content">
-              <h2 class="unique-title">"Urban Decay"</h2>
-              <p class="unique-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Tempore fuga voluptatum, iure corporis inventore praesentium
-                nisi. Id laboriosam ipsam enim.
-              </p>
-              <button>Read More</button>
-            </div>
-          </li>
-          <li
-            class="unique-item"
-            style="
-              background-image: url(&quot;https://da.se/app/uploads/2015/09/simon-december1994.jpg&quot;);
-            ">
-            <div class="unique-content">
-              <h2 class="unique-title">"The Migration"</h2>
-              <p class="unique-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Tempore fuga voluptatum, iure corporis inventore praesentium
-                nisi. Id laboriosam ipsam enim.
-              </p>
-              <button>Read More</button>
-            </div>
-          </li>
-        </ul>
-        <nav class="unique-nav">
-          <ion-icon
-            class="unique-btn unique-prev"
-            name="arrow-back-outline"></ion-icon>
-          <ion-icon
-            class="unique-btn unique-next"
-            name="arrow-forward-outline"></ion-icon>
-        </nav>
+    <div class="before-after-container">
+      <div class="container">
+        <div class="image-container">
+          <img
+            class="image-before slider-image"
+            src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+            alt="color photo" />
+          <img
+            class="image-after slider-image"
+            src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+            alt="black and white" />
+        </div>
+        <!-- step="10" -->
+        <input
+          type="range"
+          min="0"
+          max="100"
+          value="50"
+          aria-label="Percentage of before photo shown"
+          class="slider" />
+        <div class="slider-line" aria-hidden="true"></div>
+        <div class="slider-button" aria-hidden="true">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="30"
+            height="30"
+            fill="currentColor"
+            viewBox="0 0 256 256">
+            <rect width="256" height="256" fill="none"></rect>
+            <line
+              x1="128"
+              y1="40"
+              x2="128"
+              y2="216"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="16"></line>
+            <line
+              x1="96"
+              y1="128"
+              x2="16"
+              y2="128"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="16"></line>
+            <polyline
+              points="48 160 16 128 48 96"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="16"></polyline>
+            <line
+              x1="160"
+              y1="128"
+              x2="240"
+              y2="128"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="16"></line>
+            <polyline
+              points="208 96 240 128 208 160"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="16"></polyline>
+          </svg>
+        </div>
       </div>
-    </section>
+    </div>
 
     <script>
-      const slider = document.querySelector(".unique-slider");
-
-      function activate(e) {
-        const items = document.querySelectorAll(".unique-item");
-        e.target.matches(".unique-next") && slider.append(items[0]);
-        e.target.matches(".unique-prev") &&
-          slider.prepend(items[items.length - 1]);
-      }
-
-      document.addEventListener("click", activate, false);
+      const container = document.querySelector(".container");
+      document.querySelector(".slider").addEventListener("input", (e) => {
+        container.style.setProperty("--position", `${e.target.value}%`);
+      });
     </script>
-
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
